[package]
name = "c_compiler"
version = "0.1.0"
authors = ["mark chaitin <mchaitin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
flexi_logger = "0.16.1"
log = "0.4.11"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }