[package]
name = "c_compiler"
version = "0.1.0"
authors = ["mark chaitin <mchaitin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
flexi_logger = "0.16.1"
log = "0.4.11"
onig = "6.1.0"